# Jira-daily-task-extractor

./: README.md  data.csv  jira_daily_activity_logger.py  pyproject.toml  requirements.txt  task-updator.py
.github/workflows/: main.yml
